# vulkanroject

./: .gitignore  CMakeLists.txt  Makefile  compile.sh  main.cpp  vulkanProject.kdev4
shaders/: shader.frag  shader.vert
src/: app.cpp  app.h  loadBinFile.cpp  loadBinFile.h  window.cpp  window.h
